--- a/static/index.html
+++ b/static/index.html
@@ -23,10 +23,10 @@
         <![endif]-->
 
     <div id="main-grid">
-        <div id="display" class="nofile" ondblclick="openFile();" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" ondragleave="dragLeaveHandler(event);">
+        <div id="display" class="nofile" onclick="openFile();" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" ondragleave="dragLeaveHandler(event);">
             <div id="drag-and-drop">
                 <div id="drag-and-drop-text">
-                    <p>Drag and drop your file here, or double click to open a file.</p>
+                    <p>Drag and drop your file here, or click to open a file.</p>
                     <p>Supported filetypes: .PDF, .JPG, .JPEG, .PNG, .BMP, .TIFF, .TIF, .WEBP, .GIF</p>
                 </div>
 
@@ -43,10 +43,10 @@
                 </div>
                 
                 <div id="size-select" class="options">
-                    <button class="radio selected" onclick="setPaperSize(0)">17 in</button>
-                    <button class="radio" onclick="setPaperSize(1)">24 in</button>
-                    <button class="radio" onclick="setPaperSize(2)">36 in</button>
-                    <button class="radio" onclick="setPaperSize(3)">44 in</button>
+                    <button value="17" class="radio" onclick="setPaperSize(0)">17 in</button>
+                    <button value="24" class="radio" onclick="setPaperSize(1)">24 in</button>
+                    <button value="36" class="radio" onclick="setPaperSize(2)">36 in</button>
+                    <button value="44" class="radio selected" onclick="setPaperSize(3)">44 in</button>
                 </div>
             </div>
 
@@ -61,8 +61,8 @@
                 </div>
 
                 <div id="side-select" class="options">
-                    <button class="radio selected" onclick="setSide(0)" onmouseenter="showPreview('static/img/sample_short_side.png')" onmouseleave="clearPreview()">Short Side</button>
-                    <button class="radio" onclick="setSide(1)" onmouseenter="showPreview('static/img/sample_long_side.png')" onmouseleave="clearPreview()">Long Side</button>
+                    <button value="short" class="radio selected" onclick="setSide(0)" onmouseenter="showPreviewTemp('short')" onmouseleave="clearPreview()">Short Side</button>
+                    <button value="long" class="radio" onclick="setSide(1)" onmouseenter="showPreviewTemp('long')" onmouseleave="clearPreview()">Long Side</button>
                 </div>
             </div>
 
@@ -71,15 +71,15 @@
                     Sizing
                 </div>
                 <div id="sizing-select" class="options">
-                    <button class="radio selected" onclick="setSizing(0)">Maximize Size</button>
-                    <button class="radio" onclick="setSizing(1)">Specific Width/Height/Both</button>
-                    <button class="radio" onclick="setSizing(2)">Specific DPI</button>
+                    <button value="max_size" class="radio selected" onclick="setSizing(0)">Maximize Size</button>
+                    <button value="specific_size" class="radio" onclick="setSizing(1)">Specific Width/Height/Both</button>
+                    <button value="specific_dpi" class="radio" onclick="setSizing(2)">Specific DPI</button>
                 </div>
             </div>
 
             <div id="h-w-input" class="options-box hidden">
                 <div class="title">
-                    Height & Width
+                    Width & Height
                 </div>
 
                 <div class="explain">
@@ -93,9 +93,11 @@
                 </div>
 
                 <div class="options">
+                    <label for="width-input">Width</label>
                     <input class="num-input" type="number" id="width-input" value="11" min="0" max="44" step="1" onchange="setBoundedValue(this)"/>
                     <div class="unit">in</div>
 
+                    <label for="height-input">Height</label>
                     <input class="num-input" type="number" id="height-input" value="17" min="0" max="80" step="1" onchange="setBoundedValue(this)"/>
                     <div class="unit">in</div>
                 </div>
@@ -122,7 +124,7 @@
 
         <div id="render">
             <button id="render-preview" onclick="renderPreview()">Preview</button>
-            <button id="print" onclick="print()">Print</button>
+            <button id="print" onclick="printImage()">Print</button>
         </div>
     </div>
 
