--- a/static/index.html
+++ b/static/index.html
@@ -61,8 +61,8 @@
                 </div>
 
                 <div id="side-select" class="options">
-                    <button value="short" class="radio selected" onclick="setSide(0)" onmouseenter="showPreviewTemp('short')" onmouseleave="clearPreview()">Short Side</button>
-                    <button value="long" class="radio" onclick="setSide(1)" onmouseenter="showPreviewTemp('long')" onmouseleave="clearPreview()">Long Side</button>
+                    <button value="short" class="radio selected" onclick="setSide(0)">Short Side</button>
+                    <button value="long" class="radio" onclick="setSide(1)">Long Side</button>
                 </div>
             </div>
 
