finalize info box

--- a/static/index.html
+++ b/static/index.html
@@ -129,9 +129,9 @@
 
         <div id="render">
             <div id="info-box">
-                Size: <span id="size">----</span>
+                Size: ---
                 <br>
-                DPI: <span id="dpi">----</span>
+                DPI: ---
                 <br>
             </div>   
             <button id="print" onclick="openPrintConfirmation()" disabled>Print</button>
