--- a/static/index.html
+++ b/static/index.html
@@ -157,6 +157,7 @@
                 </div>
     
                 <div id="print-confirmation-text">
+                    <p>You need to have taken the General Safety Quiz at <a href="https://make.hmc.edu/?p=quiz-info">MAKE</a> to print.</p>
                     <p>This will open a new background window with the image.</p>
                     <p>Make sure to reselect paper size as "CALCULATED PAPER" and uncheck "Fit picture to frame".</p>
                 </div>
