--- a/static/index.html
+++ b/static/index.html
@@ -169,6 +169,7 @@
                     <p>This will open a new background window with the image.</p>
                     <p>Make sure to reselect paper size as "CALCULATED PAPER" and uncheck "Fit picture to frame".</p>
                 </div>
+
                 <div id="print-confirmation-buttons">
                     <button id="print-confirmation-yes" class="radio" onclick="printImage()" disabled>Print</button>
                     <button id="print-confirmation-no" class="radio" onclick="closePrintConfirmation()">Cancel</button>
@@ -185,6 +186,15 @@
                 <div class="loader">
 
                 </div>
+            </div>
+        </div>
+
+        <div id="gif-container" class="hidden">
+            <div id="gif">
+                <div id="gif-header">
+                    <button id="close-gif" onclick="closeGif()">X</button>
+                </div>
+                <img src="static/img/open.gif" alt="Loading...">
             </div>
         </div>
     </div>
