Add price calculation

--- a/static/index.html
+++ b/static/index.html
@@ -141,6 +141,8 @@
                 <br>
                 DPI: ---
                 <br>
+                Price: ---
+                <br>
             </div>   
             <button id="print" onclick="openPrintConfirmation()" disabled>Print</button>
         </div>
